--- a/parker6kApp/Db/p6k_axis_home.template
+++ b/parker6kApp/Db/p6k_axis_home.template
@@ -6,7 +6,7 @@
 # Macros:
 # M - base PV name (should match the motor record)
 # H_TYPE - home type (See $(M):HomeType record for options)
-# H_OFFSET - home position to set at end of home procedure
+# H_POS - home position to set at end of home procedure
 # H_SPEED - home speed. This may be used when backing off a limit switch.
 # H_BACKOFF - home backoff. The distance to backoff a limit switch.
 #
@@ -48,7 +48,7 @@ record(mbbo, "$(M):HomeType")
 record(ao, "$(M):HomePostion")
 {
    field(PINI, "YES")
-   field(VAL, "$(H_OFFSET=0)")
+   field(VAL, "$(H_POS=0)")
 }
 
 # ///
