Bug fixes to set home position sequence.

--- a/parker6kApp/Db/p6k_axis_home.template
+++ b/parker6kApp/Db/p6k_axis_home.template
@@ -77,7 +77,7 @@ record(seq, "$(M):HomePositionSet")
 {	
    field(DLY1, "0")
    field(DOL1, "$(M).OFF")
-   field(LNK1, "$(M):UserOffsetStore PP")
+   field(LNK1, "$(M):OffsetStore PP")
    field(DLY2, "0")
    field(DOL2, "$(M).RBV")
    field(LNK2, "$(M):RBVStore PP")
@@ -95,7 +95,7 @@ record(seq, "$(M):HomePositionSet")
    field(LNK6, "$(M).SET PP")
    field(DLY7, "0")
    field(DOL7, "0")
-   field(LNK7, "$(M):UserOffsetStore PP")
+   field(LNK7, "$(M):OffsetStore PP")
    field(DLY8, "0")
    field(DOL8, "1")
    field(LNK8, "$(M):RBVChangeCalc.PROC PP")
@@ -125,7 +125,7 @@ record(calcout, "$(M):RBVChangeCalc")
 {
    field(INPA, "$(M):RBVStore")
    field(INPB, "$(M).RBV")
-   field(CALC, "A-B")
+   field(CALC, "B-A")
    field(OOPT, "Every Time")
    field(DOPT, "Use CALC")
    field(OUT, "$(M):RBVChange PP")
