p6k_axis_home.template: minor bug fixes for homing on limit switches.

--- a/parker6kApp/Db/p6k_axis_home.template
+++ b/parker6kApp/Db/p6k_axis_home.template
@@ -93,7 +93,7 @@ record(dfanout, "$(M):RestoreNormalSpeed")
 record(ao, "$(M):HomeBackoff")
 {
    field(PINI, "YES")
-   field(VAL, "$(H_BACKOFF=0)")
+   field(VAL, "$(H_BACKOFF=1)")
 }
 
 #######################################################
@@ -174,6 +174,7 @@ record(calc, "$(M):HomeCounter")
 {
    field(INPA, "$(M):HomeCounter.VAL")
    field(CALC, "A+1")
+   field(PINI, "YES")
    info(autosaveFields, "VAL")
    info(archive, "Monitor, 00:00:01, VAL")
 }
@@ -220,31 +221,31 @@ record(sseq, "$(M):HomeToHighLimit")
    field(WAIT9, "Wait")
    field(DLY1, "0")
    field(DOL1, "1")
-   field(LNK1, "$(M):HomeToHighLimit:Status.VAL PP")
+   field(LNK1, "$(M):HomeToHighLimit:Status.VAL CA")
    field(DLY2, "0")
    field(DOL2, "$(M).DHLM")
-   field(LNK2, "$(M).DVAL PP")
+   field(LNK2, "$(M).DVAL CA")
    field(DLY3, "1")
    field(DOL3, "1")
-   field(LNK3, "$(M):HomeToHighLimit:Check.PROC PP")
+   field(LNK3, "$(M):HomeToHighLimit:Check.PROC CA")
    field(DLY4, "0")
    field(DOL4, "1")
-   field(LNK4, "$(M):HomeToHighLimit:Backoff.PROC PP")
+   field(LNK4, "$(M):HomeToHighLimit:Backoff.PROC CA")
    field(DLY5, "0")
    field(DOL5, "$(M):HomeSpeed.VAL")
-   field(LNK5, "$(M).VELO PP")
+   field(LNK5, "$(M).VELO CA")
    field(DLY6, "1")
    field(DOL6, "$(M).DHLM")
-   field(LNK6, "$(M).DVAL PP")
+   field(LNK6, "$(M).DVAL CA")
    field(DLY7, "1")
    field(DOL7, "1")
-   field(LNK7, "$(M):HomeToHighLimit:Check.PROC PP")
+   field(LNK7, "$(M):HomeToHighLimit:Check.PROC CA")
    field(DLY8, "1")
    field(DOL8, "1")
-   field(LNK8, "$(M):HomePositionSet.PROC PP")
+   field(LNK8, "$(M):HomePositionSet.PROC CA")
    field(DLY9, "0")
    field(DOL9, "0")
-   field(LNK9, "$(M):HomeToHighLimit:Status.VAL PP")
+   field(LNK9, "$(M):HomeToHighLimit:Status.VAL CA")
    field(FLNK, "$(M):RestoreNormalSpeed")
 }
 
@@ -343,31 +344,31 @@ record(sseq, "$(M):HomeToLowLimit")
    field(WAIT9, "Wait")
    field(DLY1, "0")
    field(DOL1, "1")
-   field(LNK1, "$(M):HomeToLowLimit:Status.VAL PP")
+   field(LNK1, "$(M):HomeToLowLimit:Status.VAL CA")
    field(DLY2, "0")
-   field(DOL2, "$(M).DHLM")
-   field(LNK2, "$(M).DVAL PP")
+   field(DOL2, "$(M).DLLM")
+   field(LNK2, "$(M).DVAL CA")
    field(DLY3, "1")
    field(DOL3, "1")
-   field(LNK3, "$(M):HomeToLowLimit:Check.PROC PP")
+   field(LNK3, "$(M):HomeToLowLimit:Check.PROC CA")
    field(DLY4, "0")
    field(DOL4, "1")
-   field(LNK4, "$(M):HomeToLowLimit:Backoff.PROC PP")
+   field(LNK4, "$(M):HomeToLowLimit:Backoff.PROC CA")
    field(DLY5, "0")
    field(DOL5, "$(M):HomeSpeed.VAL")
-   field(LNK5, "$(M).VELO PP")
+   field(LNK5, "$(M).VELO CA")
    field(DLY6, "1")
-   field(DOL6, "$(M).DHLM")
-   field(LNK6, "$(M).DVAL PP")
+   field(DOL6, "$(M).DLLM")
+   field(LNK6, "$(M).DVAL CA")
    field(DLY7, "1")
    field(DOL7, "1")
-   field(LNK7, "$(M):HomeToLowLimit:Check.PROC PP")
+   field(LNK7, "$(M):HomeToLowLimit:Check.PROC CA")
    field(DLY8, "1")
    field(DOL8, "1")
-   field(LNK8, "$(M):HomePositionSet.PROC PP")
+   field(LNK8, "$(M):HomePositionSet.PROC CA")
    field(DLY9, "0")
    field(DOL9, "0")
-   field(LNK9, "$(M):HomeToLowLimit:Status.VAL PP")
+   field(LNK9, "$(M):HomeToLowLimit:Status.VAL CA")
    field(FLNK, "$(M):RestoreNormalSpeed")
 }
 
