--- a/parker6kApp/Db/p6k_axis.template
+++ b/parker6kApp/Db/p6k_axis.template
@@ -182,6 +182,31 @@ record(bi, "$(M):SendPositionOnly_RBV")
    field(SCAN, "I/O Intr")
 }
 
+# ///
+# /// Enable or disable the use of controller software limits.
+# /// In some cases we might want to disable these, particulary 
+# /// when UEIP=Yes and the motor position can get out of sync
+# /// with the encoder positions. We default to enabled.
+# ///
+record(bo, "$(M):LSEnable")
+{
+   field(PINI, "YES")
+   field(DTYP, "asynInt32")
+   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))P6K_A_LS_ENABLE")
+   field(ZNAM, "Disable")
+   field(ONAM, "Enable")
+   field(VAL,  "$(LS_ENABLE=1)")
+   info(autosaveFields, "VAL")
+}
+record(bi, "$(M):LSEnable_RBV")
+{
+   field(DTYP, "asynInt32")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))P6K_A_LS_ENABLE")
+   field(ZNAM, "Disable")
+   field(ONAM, "Enable")
+   field(SCAN, "I/O Intr")
+}
+
 
 ############################################################################
 # Time since last move
